Banner and Pillar section added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,59 @@
       <button class="btn navBtn">Sign In</button>
     </nav>
 
+    <div class="banner">
+      <div class="banner-text">
+        <h3 class="sub-heading">Bangladesh 2.0</h3>
+        <h1 class="heading-1">
+          Idea, innovation, <br />vision and challenges in New Bangladesh.
+        </h1>
+        <button class="btn headingBtn">Explore New Bangladesh</button>
+      </div>
+      <div class="bannerImg">
+        <img src="./assets/hero.png" alt="" />
+      </div>
+    </div>
 
+    <div class="pillars">
+      <h2 class="pillarHeading">Pillars of "Bangladesh 2.0"</h2>
+      <div class="pillarCards">
+        <div class="cardContent">
+          <img src="./assets/card-icon.png" alt="Card Icon" />
+          <h4 class="cardTitle">Innovation</h4>
+          <p class="cardText">
+            New Ideas should come up to make a new Bangladesh.
+          </p>
+        </div>
+        <div class="pillarCards">
+          <div class="cardContent">
+            <img src="./assets/card-icon.png" alt="Card Icon" />
+            <h4 class="cardTitle">Sustainabilty</h4>
+            <p class="cardText">
+              Most of the works need a plan of Sustainable Development.
+            </p>
+          </div>
+        </div>
+        <div class="pillarCards">
+          <div class="cardContent">
+            <img src="./assets/card-icon.png" alt="Card Icon" />
+            <h4 class="cardTitle">Infrastructure</h4>
+            <p class="cardText">
+              Our infrastructure system will be built as we are a developed
+              country.
+            </p>
+          </div>
+        </div>
+        <div class="pillarCards">
+          <div class="cardContent">
+            <img src="./assets/card-icon.png" alt="Card Icon" />
+            <h4 class="cardTitle">Empowerment</h4>
+            <p class="cardText">
+              Every professional or household will enjoy the taste of
+              empowerment.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
