Vision section added

--- a/index.html
+++ b/index.html
@@ -66,5 +66,45 @@
         </div>
       </div>
     </div>
+
+    <div class="vision">
+      <h2 class="visionHeading">The Vision of Future</h2>
+      <p class="visionSubHeading">
+        Bangladesh 2.0 aims to reduce the nation's trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainabilty. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <div class="visionCards">
+        <div class="visionCardContent">
+          <img src="./assets/card-icon.png" alt="Card Icon" />
+          <h4 class="visionCardTitle">Digital TRansformation</h4>
+          <p class="visionCardText">
+            Creating a nationwide digital ecosystem to enhance connectivity and
+            access to services for all citizens.
+          </p>
+          <button class="btn gtBtn">Learn More</button>
+        </div>
+        <div class="visionCardContent">
+          <img src="./assets/card-icon.png" alt="Card Icon" />
+          <h4 class="visionCardTitle">Green Energy</h4>
+          <p class="visionCardText">
+            Investments in solar and wind energy to ensure a sustainable and
+            eco-friendly future.
+          </p>
+          <button class="btn geBtn">Learn More</button>
+        </div>
+        <div class="visionCardContent">
+          <img src="./assets/card-icon.png" alt="Card Icon" />
+          <h4 class="visionCardTitle">Modern Infrastructure</h4>
+          <p class="visionCardText">
+            Building state-of-the-art infrastructure to support economic growth
+            and global competitiveness.
+          </p>
+          <button class="btn miBtn">Learn More</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
