Qoute and Opinion section added

--- a/index.html
+++ b/index.html
@@ -106,5 +106,77 @@
         </div>
       </div>
     </div>
+
+    <div class="qoute">
+      <img src="./assets/quote-bg.png" alt="" />
+      <div class="qouteContent">
+        <p class="qouteText">
+          The “power of populace,” in particular the youth, helped liberate
+          Bangladeshis from an autocratic and undemocratic regime, he said,
+          crediting that youth-led movement with propelling Bangladesh into a
+          new phase of political consciousness, while championing human dignity,
+          freedom and social justice.
+        </p>
+        <h4 class="qouteOwner">Dr. Muhammad Yunus</h4>
+        <p class="qouteOwnerDesignation">
+          Chief Adviser of the People's Republic of Bangladesh
+        </p>
+      </div>
+    </div>
+
+    <div class="opinion">
+      <h2 class="opinionHeader">Your Opinion Matters</h2>
+      <div class="opinionTable">
+        <table>
+          <thead>
+            <tr>
+              <th>Questions</th>
+              <th>Select Your Opinion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a
+                developed nation?
+              </td>
+              <td>
+                <select>
+                  <option value="yes">Yes, I Agree</option>
+                  <option value="no">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a
+                developed nation?
+              </td>
+              <td>
+                <select>
+                  <option value="yes">Yes, I Agree</option>
+                  <option value="no">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a
+                developed nation?
+              </td>
+              <td>
+                <select>
+                  <option value="yes">Yes, I Agree</option>
+                  <option value="no">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </body>
 </html>
