--- a/index.html
+++ b/index.html
@@ -178,5 +178,51 @@
         </table>
       </div>
     </div>
+
+    <div class="recentNews">
+      <h2 class="newsHeader">Recent News</h2>
+      <p class="newsText">
+        Bangladesh 2.0 aims to reduce the nation's trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainabilty. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <div class="newsArticles">
+        <div class="article-1">
+          <img src="/assets/satelite.png" alt="Satellite Image" />
+          <div class="articleContent">
+            <h3 class="articleHeader">Bangladesh Launches New satellite</h3>
+            <img src="/assets/al-jazeera.png" alt="Al-Jazeera Icon" />
+            <p class="articleDate">Date: 05/01/2025 time: 10.25pm</p>
+            <p class="articleText">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries- not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized.
+            </p>
+            <div><button class="btn readMore">Read More</button></div>
+          </div>
+        </div>
+
+        <div class="article-2">
+          <div class="articleContent">
+            <h3 class="articleHeader">Bangladesh Launches New satellite</h3>
+            <img src="/assets/al-jazeera.png" alt="Al-Jazeera Icon" />
+            <p class="articleDate">Date: 05/01/2025 time: 10.25pm</p>
+            <p class="articleText">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries- not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized.
+            </p>
+            <div><button class="btn readMore">Read More</button></div>
+          </div>
+          <img src="/assets/satelite.png" alt="Satellite Image" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
