Donation Newsletter & Footer section added

--- a/index.html
+++ b/index.html
@@ -224,5 +224,52 @@
         </div>
       </div>
     </div>
+
+    <div class="donate">
+      <h2 class="donateHeader">Donate Today</h2>
+      <p class="donateText">
+        Bangladesh 2.0 aims to reduce the nation's trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainabilty. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <div class="donationAmounts">
+        <div class="amount">100 Taka</div>
+        <div class="amount">200 Taka</div>
+        <div class="amount">500 Taka</div>
+        <div class="amount">1000 Taka</div>
+      </div>
+      <input type="number" name="" placeholder="Other Amount (Taka)" id="" />
+      <div><button class="btn readMore">Donate Now</button></div>
+    </div>
+
+    <div class="newsletter">
+      <h2 class="newsletterHeader">Subscribe Newsletter</h2>
+      <p class="newsletterText">
+        Bangladesh 2.0 aims to reduce the nation's trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainabilty. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <form class="newsletterForm">
+        <input type="email" placeholder="Enter your email here" />
+        <button class="newsletterBtn">Submit</button>
+      </form>
+      <p class="newsletterText">We promise not to spam you!</p>
+    </div>
+
+    <div class="footer">
+      <div class="footerContent">
+        <h3>Bangladesh 2.0</h3>
+        <hr />
+        <div class="footerImage">
+          <img src="./assets/facebook.png" alt="" />
+          <img src="./assets/instagram.png" alt="" />
+          <img src="./assets/x.png" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
