Image location changed from absolute to relative

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
       </p>
       <div class="newsArticles">
         <div class="article-1">
-          <img src="/assets/satelite.png" alt="Satellite Image" />
+          <img src="./assets/satelite.png" alt="Satellite Image" />
           <div class="articleContent">
             <h3 class="articleHeader">Bangladesh Launches New satellite</h3>
-            <img src="/assets/al-jazeera.png" alt="Al-Jazeera Icon" />
+            <img src="./assets/al-jazeera.png" alt="Al-Jazeera Icon" />
             <p class="articleDate">Date: 05/01/2025 time: 10.25pm</p>
             <p class="articleText">
               Not until the creation and maintenance of decent conditions of
@@ -209,7 +209,7 @@
         <div class="article-2">
           <div class="articleContent">
             <h3 class="articleHeader">Bangladesh Launches New satellite</h3>
-            <img src="/assets/al-jazeera.png" alt="Al-Jazeera Icon" />
+            <img src="./assets/al-jazeera.png" alt="Al-Jazeera Icon" />
             <p class="articleDate">Date: 05/01/2025 time: 10.25pm</p>
             <p class="articleText">
               Not until the creation and maintenance of decent conditions of
@@ -220,7 +220,7 @@
             </p>
             <div><button class="btn readMore">Read More</button></div>
           </div>
-          <img src="/assets/satelite.png" alt="Satellite Image" />
+          <img src="./assets/satelite.png" alt="Satellite Image" />
         </div>
       </div>
     </div>
